# modded-nanogpt

./: .gitignore  INSTRUCTIONS.md  pyproject.toml  requirements.txt  run_byte_level.sh  run_hnet.sh  run_mamba.sh  train_byte_level.py  train_hnet.py  train_mamba.py
data/: convert_data_to_bytes.py
