[project]
name = "modded-nanogpt"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.10"
dependencies = [
    "causal-conv1d>=1.5.2",
    "datasets>=4.0.0",
    "huggingface-hub>=0.34.4",
    "mamba-ssm",
    "numpy>=2.2.6",
    "tiktoken>=0.11.0",
    "torch>=2.8.0",
    "tqdm>=4.67.1",
    "wandb>=0.21.1",
]

[tool.uv.sources]
mamba-ssm = { git = "https://github.com/state-spaces/mamba.git" }
